styles.css
* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

.hidden {
  display: none;
}

.room-list {
  list-style: none;
}

.hidden {
  display: none;
}

#datePicker {
  font-size: 24px;
  margin: 1em;
}

#datePicker .wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

#datePicker span {
  margin: 0 20px;
}

button {
  display: inline-block;
  border: none;
  padding: 1rem 2rem;
  margin: 0;
  text-decoration: none;
  background: #99c221;
  color: #ffffff;
  font-family: sans-serif;
  font-size: 1rem;
  cursor: pointer;
  text-align: center;
  transition: background 250ms ease-in-out, transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
}

button:hover,
button:focus {
  background: #83b640;
}

button:focus {
  outline: 1px solid #fff;
  outline-offset: -4px;
}

button:active {
  transform: scale(0.99);
}

#stage1 h3 {
  background-color: #008db1;
  padding: 10px;
  color: white;
}

#stage1 h3 input {
  vertical-align: bottom;
  margin-bottom: 8px;
}

#stage2 {
  display: grid;
  background-color: #a7d4ee;
}

#stage2 > div {
  border: 1px solid #008db1;
  background-color: white;
  padding: 0.3em;
  margin: 0.1em;
  color: black;
}

#stage2 > div.reserved-event {
  background-color: #008db1;
  border: 1px solid #008db1;
  border-radius: 5px;
}

#stage2 > div.room-name {
  background-color: white;
}

#stage2 > div.highlight {
    background-color: rgba(255, 255, 255, 0.5);
    border: none;
    z-index: 1;
}

#stage2 > div.highlight:nth-of-type(even) {
    display: none;
}

